<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/color_menu"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="fragment.AddFormulaFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_menu_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right|top"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/ic_menu_back"
        android:stateListAnimator="@null" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="10sp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:paddingLeft="33sp"
        android:paddingRight="33sp"
        android:text="@string/menu"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:background="@drawable/back_btn_menu"
        android:gravity="center"
        android:padding="3sp"
        android:text="@string/add_formula"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_science"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:background="@drawable/back_btn_menu"
        android:gravity="center"
        android:padding="3sp"
        android:text="@string/add_science"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_science_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:background="@drawable/back_btn_menu"
        android:gravity="center"
        android:padding="3sp"
        android:text="@string/edit_science"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:background="@drawable/back_btn_menu"
        android:gravity="center"
        android:padding="3sp"
        android:text="@string/add_theme"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_theme_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:background="@drawable/back_btn_menu"
        android:gravity="center"
        android:padding="3sp"
        android:text="@string/edit_theme"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>