<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_frag_back"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="fragment.AddFormulaFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:gravity="center"
        android:text="@string/add_formula"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/name_of_the_formula"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_formulaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:background="@drawable/ic_back"
            android:gravity="center"
            android:hint="@string/title"
            android:padding="3sp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8sp"
            android:gravity="center"
            android:paddingTop="12sp"
            android:text="@string/formula"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_formula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:background="@drawable/ic_back"
            android:gravity="center"
            android:hint="@string/formula"
            android:padding="3sp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="12sp"
            android:text="@string/science_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:padding="15sp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="12sp"
            android:text="@string/theme_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:padding="12sp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12sp"
            android:background="@drawable/ic_back"
            android:gravity="center"
            android:padding="12sp"
            android:text="@string/add_formula"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


</LinearLayout>